WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132504
REGRESSION (WebKit2) Need to support reanalyze button for Chinese Traditional
https://bugs.webkit.org/show_bug.cgi?id=132504
Summary
REGRESSION (WebKit2) Need to support reanalyze button for Chinese Traditional
Enrica Casucci
Reported
2014-05-02 16:48:19 PDT
Tracks the work required. <
rdar://problem/16778862
>
Attachments
Patch
(2.89 KB, patch)
2014-05-02 16:50 PDT
,
Enrica Casucci
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-05-02 16:50:50 PDT
Created
attachment 230718
[details]
Patch
Enrica Casucci
Comment 2
2014-05-02 17:01:32 PDT
Committed revision 168210.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug